# planetisodon

./: .gitignore  Cargo.toml  README.md  initial.sql  package.json  wrangler.toml  wrangler.toml.sample
planetisodon-client/: package.json  pnpm-lock.yaml  vite.config.ts
planetisodon-client/src/: main.tsx
planetisodon-client/src/pages/: App.tsx  ThreadListView.tsx  ThreadView.tsx
src/: bbs_repository.rs  dtos.rs  lib.rs  utils.rs
src/routes/: auth.rs  bbs_cgi.rs  dat_routing.rs  setting_txt.rs  subject_txt.rs
src/static/: index.html
